--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,3 +5,7 @@ deploy:
     script:
         - npm install
         - if [ "$CI_COMMIT_REF_NAME" == "master" ]; then cp -R ./* /home/ec2-user/discordbot_zbeub; fi
+    artifacts:
+        reports:
+            dotenv: build.env
+        
