--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,10 @@ stages:
     - deploy
 deploy:
     stage: deploy
+    cache:
+        paths:
+          - node_modules/
+      
     script:
         - npm install
         - if [ "$CI_COMMIT_REF_NAME" == "master" ]; then cp -R ./* /home/ec2-user/discordbot_zbeub; fi
