--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "discordbot_zbeub",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,11 +12,8 @@
     "@discordjs/opus": "^0.3.3",
     "axios": "^0.21.1",
     "discord.js": "^12.5.1",
-    "discord.js-commando": "^0.11.1",
     "dotenv": "^8.2.0",
     "ffmpeg-static": "^4.2.7",
-    "node-opus": "^0.3.3",
-    "opusscript": "^0.0.7",
     "yt-search": "^2.5.2",
     "ytdl-core": "^4.4.5",
     "ytsearcher": "^1.2.3",
