--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,27 @@
 stages:
     - deploy
 deploy:
+    services:
+        - node:latest
     stage: deploy
+    image: alpine
     cache:
         paths:
           - node_modules/
-      
+    before_script:
+        - apk add openssh-client
+        - eval $(ssh-agent -s)
+        - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
+        - mkdir -p ~/.ssh
+        - chmod 700 ~/.ssh
     script:
-        - npm install
-        - git pull origin
+        - scp -o StrictHostKeyChecking=no ./* ec2-18-216-243-172.us-east-2.compute.amazonaws.com:/home/bitnami/htdocs
+        - ssh -o StrictHostKeyChecking=no ec2-18-216-243-172.us-east-2.compute.amazonaws.com "cd /home/ec2-user/discordbot_zbeub; pm2 start main.js"
+deploy:
+    stage: deploy
+    image: alpine
+    
+    script:
+    
 
         
