--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,13 +15,8 @@ deploy:
         - mkdir -p ~/.ssh
         - chmod 700 ~/.ssh
     script:
-        - scp -o StrictHostKeyChecking=no ./* ec2-18-216-243-172.us-east-2.compute.amazonaws.com:/home/bitnami/htdocs
+        - scp -o StrictHostKeyChecking=no ./* ec2-18-216-243-172.us-east-2.compute.amazonaws.com:/home/ec2-user/discordbot_zbeub
         - ssh -o StrictHostKeyChecking=no ec2-18-216-243-172.us-east-2.compute.amazonaws.com "cd /home/ec2-user/discordbot_zbeub; pm2 start main.js"
-deploy:
-    stage: deploy
-    image: alpine
-    
-    script:
     
 
         
