--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,21 @@
 stages:
+    - build
     - deploy
+  
+build:
+    stage: build
+    image: alpine
+    before_script:
+        - apk add zip
+    script:
+        - mkdir dist
+        - touch dist/info.txt
+        - echo "<h1>New deployment<h1>" >> dist/info.txt
+        - zip -r bot.zip dist
+    artifacts:
+        paths:
+        - bot.zip
+
 deploy:
     services:
         - node:latest
@@ -13,10 +29,10 @@ deploy:
         - eval $(ssh-agent -s)
         - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
         - mkdir -p ~/.ssh
-        - chmod 700 ~/.ssh
+        - chmod 700 ~/.ssh 
     script:
         - scp -o StrictHostKeyChecking=no ./* ec2-18-216-243-172.us-east-2.compute.amazonaws.com:/home/ec2-user/discordbot_zbeub
-        - ssh -o StrictHostKeyChecking=no ec2-18-216-243-172.us-east-2.compute.amazonaws.com "cd /home/ec2-user/discordbot_zbeub; pm2 start main.js"
+        - ssh -o StrictHostKeyChecking=no ec2-18-216-243-172.us-east-2.compute.amazonaws.com "cd /home/ec2-user/discordbot_zbeub; unzip bot.zip; pm2 start main.js"
     
 
         
