--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,9 +4,9 @@ stages:
   
 build:
     stage: build
-    image: alpine
+    image: buildpack-deps
     before_script:
-        - apk add zip
+        - apt-get install zip
     script:
         - mkdir dist
         - touch dist/info.txt
@@ -20,12 +20,12 @@ deploy:
     services:
         - node:latest
     stage: deploy
-    image: alpine
+    image: buildpack-deps
     cache:
         paths:
           - node_modules/
     before_script:
-        - apk add openssh-client
+        - apt-get install openssh-client
         - eval $(ssh-agent -s)
         - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
         - mkdir -p ~/.ssh
