--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,38 +1,21 @@
-stages:
-    - build
-    - deploy
-  
-build:
-    stage: build
-    before_script:
-        - apt-get update
-        - apt-get install zip unzip
-    script:
-        - mkdir dist
-        - touch dist/info.txt
-        - echo "<h1>New deployment<h1>" >> dist/info.txt
-        - zip -r bot.zip dist
-    artifacts:
-        paths:
-        - bot.zip
+image: node:latest
 
-deploy:
-    services:
-        - node:latest
-    stage: deploy
+    stages:
+      - build
+      - test
+
     cache:
+      paths:
+        - node_modules/
+
+    install_dependencies:
+      stage: build
+      script:
+        - npm install
+      artifacts:
         paths:
           - node_modules/
-    before_script:
-        - apt-get update
-        - apt-get install openssh-client
-        - eval $(ssh-agent -s)
-        - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
-        - mkdir -p ~/.ssh
-        - chmod 700 ~/.ssh 
-    script:
-        - scp -o StrictHostKeyChecking=no ./* ec2-18-216-243-172.us-east-2.compute.amazonaws.com:/home/ec2-user/discordbot_zbeub
-        - ssh -o StrictHostKeyChecking=no ec2-18-216-243-172.us-east-2.compute.amazonaws.com "cd /home/ec2-user/discordbot_zbeub; unzip bot.zip; pm2 start main.js"
-    
 
-        
+    testing_testing:
+      stage: test
+      script: npm test
