--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ cache:
 install_dependencies:
   stage: deploy
   script:
-    - sudo cp -R ./* /home/ec2-user/discordbot_zbeub; fi
+    - sudo cp -R ./* /home/ec2-user/discordbot_zbeub
     - sudo npm install 
   artifacts:
     paths:
