--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,22 +1,31 @@
-image: node:latest
-
 stages:
+  - build
   - deploy
 
 cache:
   paths:
     - node_modules/
 
-install_dependencies:
-  stage: deploy
+build-node-modules:
+  stage: build
+  image: node:latest
   script:
-    - sudo cp -R ./* /home/ec2-user/discordbot_zbeub
     - sudo cd node
     - echo "Installing node_modules dependencies"
     - sudo npm install
-    - sudo cd ../
-    - echo "Installing python dependencies"
-    - sudo pip install requirements.txt
   artifacts:
     paths:
       - node_modules/
+
+build-python-modules:
+  stage: build
+  image: python:3.9
+  script:
+    - sudo cd python
+    - echo "Installing python dependencies"
+    - sudo pip install requirements.txt
+
+copy-files-to-server:
+  stage: deploy
+  script:
+    - sudo cp -R ./* /home/ec2-user/discordbot_zbeub
