--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,9 @@ build-python-modules:
   stage: build
   image: python:3.9
   script:
+    - sudo which python
+    - python -m pip --version
+    - python -m pip
     - sudo cd python
     - echo "Installing python dependencies"
     - sudo pip3 install requirements.txt
