--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/opus": "^0.3.3",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
+    "cheerio": "^0.22.0",
     "discord.js": "^12.5.1",
     "discord.js-commando": "^0.11.1",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "ffmpeg-static": "^4.2.7",
+    "mongodb": "^4.2.1",
+    "nodemon": "^2.0.4",
     "opusscript": "^0.0.7",
+    "pretty": "^2.0.0",
     "yt-search": "^2.5.2",
     "ytdl-core": "^4.9.0",
     "ytsearcher": "^1.2.3",
