--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,3 +24,10 @@ services:
       - CONCOURSE_EXTERNAL_URL=http://127.0.0.1:8080
       - CONCOURSE_ADD_LOCAL_USER=admin:admin,test:test
       - CONCOURSE_MAIN_TEAM_LOCAL_USER=admin
+      - CONCOURSE_CONTAINERD_DNS_SERVER=1.1.1.1,8.8.8.8
+      - CONCOURSE_GARDEN_DNS_SERVER=1.1.1.1,8.8.8.8
+      - CONCOURSE_GARDEN_ALLOW_HOST_ACCESS=true
+      - CONCOURSE_GARDEN_DNS_PROXY_ENABLE
+      - CONCOURSE_AWS_SECRETSMANAGER_REGION=us-east-2
+      - CONCOURSE_AWS_SECRETSMANAGER_ACCESS_KEY=AKIAX377LHZNG3LX7VWJ
+      - CONCOURSE_AWS_SECRETSMANAGER_SECRET_KEY=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
