--- a/package.json
+++ b/package.json
@@ -9,21 +9,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/opus": "^0.3.3",
+    "@discordjs/opus": "^0.5.3",
     "axios": "^0.21.4",
-    "cheerio": "^0.22.0",
+    "cheerio": "^1.0.0-rc.10",
     "discord.js": "^12.5.1",
     "discord.js-commando": "^0.11.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "ffmpeg-static": "^4.2.7",
+    "ffmpeg-static": "^4.4.1",
     "mongodb": "^4.2.1",
     "nodemon": "^2.0.4",
-    "opusscript": "^0.0.7",
+    "opusscript": "^0.0.8",
     "pretty": "^2.0.0",
-    "yt-search": "^2.5.2",
-    "ytdl-core": "^4.9.0",
+    "puppeteer": "^10.2.0",
+    "yt-search": "^2.10.3",
+    "ytdl-core-discord": "^1.3.1",
     "ytsearcher": "^1.2.3",
     "ytsr": "^3.2.3"
+  },
+  "devDependencies": {
+    "chromedriver": "^96.0.0"
   }
 }
