--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
+    "start": "ts-node ./src/bot.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -28,6 +29,8 @@
     "ytsr": "^3.2.3"
   },
   "devDependencies": {
-    "chromedriver": "^96.0.0"
+    "chromedriver": "^96.0.0",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
   }
 }
