--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@discordjs/opus": "^0.5.3",
     "axios": "^0.21.4",
     "cheerio": "^1.0.0-rc.10",
+    "discord-ytdl-core": "^5.0.4",
     "discord.js": "^12.5.1",
     "discord.js-commando": "^0.11.1",
     "dotenv": "^8.2.0",
@@ -23,7 +24,7 @@
     "pretty": "^2.0.0",
     "puppeteer": "^10.2.0",
     "yt-search": "^2.10.3",
-    "ytdl-core-discord": "^1.3.1",
+    "ytdl-core": "^4.9.2",
     "ytsearcher": "^1.2.3",
     "ytsr": "^3.2.3"
   },
