--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "discordbot_zbeub",
-  "version": "1.0.0",
+  "name": "discord_bot",
+  "version": "1.0.01",
   "description": "",
-  "main": "main.js",
+  "main": "bot.ts",
   "scripts": {
     "start": "ts-node ./src/bot.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -23,9 +23,7 @@
     "opusscript": "^0.0.8",
     "pretty": "^2.0.0",
     "puppeteer": "^10.2.0",
-    "yt-search": "^2.10.3",
-    "ytdl-core-discord": "^1.3.1",
-    "ytsearcher": "^1.2.3",
+    "ytdl-core": "^4.9.2",
     "ytsr": "^3.2.3"
   },
   "devDependencies": {
