--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.01",
   "description": "",
   "scripts": {
-    "start": "ts-node ./src/bot.ts",
+    "start": "ts-node Bot.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
