--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,29 @@
 {
     "compilerOptions": {
-        "moduleResolution": "node",
-        "noImplicitAny": false,
-        "removeComments": true,
-        "preserveConstEnums": true,
-        "sourceMap": true,
-        "esModuleInterop": true
+      "target": "es5",
+      "lib": [
+        "dom",
+        "dom.iterable",
+        "esnext"
+      ],
+      "allowJs": true,
+      "skipLibCheck": true,
+      "strict": true,
+      "forceConsistentCasingInFileNames": true,
+      "noEmit": true,
+      "esModuleInterop": true,
+      "module": "CommonJS",
+      "moduleResolution": "node",
+      "resolveJsonModule": true,
+      "isolatedModules": true,
+      "jsx": "preserve",
+      "incremental": true
     },
     "include": [
-        "src/**/*"
+      "**/*.ts",
+      "**/*.tsx"
     ],
     "exclude": [
-        "**/*.spec.ts"
+      "node_modules"
     ]
-}
+  }
