--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "start": "ts-node Bot.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "thenoobgrammer",
   "license": "ISC",
+  "main": "Bot.ts",
   "dependencies": {
     "@discordjs/opus": "^0.7.0",
     "axios": "^0.21.4",
