--- a/package.json
+++ b/package.json
@@ -8,27 +8,30 @@
   },
   "author": "thenoobgrammer",
   "license": "ISC",
-  "main": "Bot.ts",
+  "main": "index.ts",
   "dependencies": {
     "@discordjs/opus": "^0.7.0",
     "@discordjs/rest": "^0.5.0",
     "@discordjs/voice": "^0.10.0",
     "axios": "^0.21.4",
     "cheerio": "^1.0.0-rc.10",
-    "discord-api-types": "^0.35.0",
+    "discord-api-types": "^0.36.0",
     "discord-ytdl-core": "^5.0.4",
     "discord.js": "^13.8.1",
     "discord.js-commando": "^0.11.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "ffmpeg-static": "^4.4.1",
+    "libsodium": "^0.7.10",
     "nodemon": "^2.0.4",
     "opusscript": "^0.0.8",
     "pretty": "^2.0.0",
+    "sodium": "^3.0.2",
     "ytdl-core": "^4.11.0",
     "ytsr": "^3.2.3"
   },
   "devDependencies": {
+    "@types/node": "^18.0.0",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
   }
