--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^2.0.4",
     "opusscript": "^0.0.8",
     "pretty": "^2.0.0",
+    "python-shell": "^3.0.1",
     "sodium": "^3.0.2",
     "ytdl-core": "^4.11.0",
     "ytsr": "^3.2.3"
