--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   "license": "ISC",
   "main": "index.ts",
   "dependencies": {
-    "@discordjs/opus": "^0.7.0",
-    "@discordjs/rest": "^0.5.0",
-    "@discordjs/voice": "^0.10.0",
+    "@discordjs/builders": "^1.2.0",
+    "@discordjs/opus": "^0.8.0",
+    "@discordjs/rest": "^1.1.0",
+    "@discordjs/voice": "^0.11.0",
     "axios": "^0.21.4",
     "cheerio": "^1.0.0-rc.10",
-    "discord-api-types": "^0.36.0",
     "discord-ytdl-core": "^5.0.4",
     "discord.js": "^13.8.1",
     "discord.js-commando": "^0.11.1",
@@ -28,7 +28,7 @@
     "pretty": "^2.0.0",
     "python-shell": "^3.0.1",
     "sodium": "^3.0.2",
-    "ytdl-core": "^4.11.0",
+    "ytdl-core": "^4.11.2",
     "ytsr": "^3.2.3"
   },
   "devDependencies": {
@@ -36,6 +36,6 @@
     "@types/node": "^18.0.0",
     "cron": "^2.0.0",
     "ts-node": "^10.8.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.8.3"
   }
 }
