--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "pm2 start --interpreter ts-node pm2.config.ts",
-    "pm2:stop": "pm2 stop --interpreter ts-node pm2.config.ts",
+    "start": "ts-node index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "thenoobgrammer",
